--- a/src/pages/options.css
+++ b/src/pages/options.css
@@ -7,10 +7,45 @@
 @import "../style/lightbox.css";
 
 
+:root {
+    --color-bkgd: #ededf0;
+    --color-main-border: #d9d9d9;
+    --color-main-border-shadow: #c8c8c8;
+    --color-main-bkgd: #fff;
+    --color-pref-body: #fefefe;
+    --color-fieldset-border: #d7d7db;
+    --color-dlg-fieldset-border: #d7d7db;
+    --color-about-btn-bkgd: #f0f0f4;
+    --color-about-btn-bkgd-hover: #e0e0e6;
+    --color-about-btn-bkgd-active: #d7d7db;
+    --color-about-btn-border: #e0e0e6;
+    --color-about-btn-border-hover: #e0e0e6;
+    --color-about-btn: black;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+	--color-bkgd: #1a1a1e;
+	--color-main-border: #2a2a2e;
+	--color-main-border-shadow: #0c0c0d;
+	--color-main-bkgd: #2a2a2e;
+	--color-pref-body: #2a2a2e;
+	--color-fieldset-border: #4a4a4f;
+	--color-dlg-fieldset-border: #585858;
+	--color-about-btn-bkgd: #2a2a2e;
+	--color-about-btn-bkgd-hover: #38383d;
+	--color-about-btn-bkgd-active: #4a4a4f;
+	--color-about-btn-border: #4a4a4f;
+	--color-about-btn-border-hover: #b1b1b3;
+	--color-about-btn: #f9f9fa;
+    }
+}
+
 body {
-    background-color: #ededf0;
+    background-color: var(--color-bkgd);
+    color: var(--color-default-text);
     font: caption;
-    font-size: 13px;
+    font-size: 15px;
 }
 
 main {
@@ -21,7 +56,12 @@ main {
 
     width: 640px;
     margin: 24px auto 0 auto;
-    background-color: #fff;
+    margin: 24px auto 0 auto;
+    cursor: inherit;
+    border: 1px solid var(--color-main-border);
+    border-radius: 4px;
+    box-shadow: 0 0 8px 2px var(--color-main-border-shadow);
+    background-color: var(--color-main-bkgd);
 }
 
 h2 {
@@ -44,10 +84,11 @@ h2 {
 #pref-body {
     order: 2;
     flex: 1 1 auto;
-    border-left: 1px solid #ededf0;
+    border-left: 1px solid var(--color-about-btn-border);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     padding: 16px 16px 16px 16px;
-    background-color: #fefefe;
-    font-size: 15px;
+    background-color: var(--color-pref-body);
 }
 
 #addon-icon {
@@ -65,7 +106,23 @@ h2 {
 #about-btn {
     float: right;
     height: unset;
+    border: 1px solid var(--color-about-btn-border);
+    padding: 2px 8px;
+    border-radius: 3px;
     font-size: 11px;
+    font-weight: 400;
+    background-color: var(--color-about-btn-bkgd);
+    color: var(--color-about-btn);
+}
+
+#about-btn:hover {
+    border-color: var(--color-btn-hover-border);
+    background-color: var(--color-about-btn-bkgd-hover);
+}
+
+#about-btn:active {   
+    border: 1px solid #b1b1b3;
+    background-color: var(--color-about-btn-bkgd-active);
 }
 
 #dlg-mode-opts {
@@ -74,7 +131,7 @@ h2 {
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: 1px solid #b1b1b1;
+    border-bottom: 1px solid var(--color-fieldset-border);
 }
 
 .desc {
